--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
 									<header>
 										<h3>Time Management</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>Learn how to better manage your time for a stress free personal and work life. We teach you life skills that are going to take you a long way.</p>
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
