--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
 									<header>
 										<h3>Re-Energise</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>The key to being productive is operating with positive energy and letting that sustain itself so that it becomes momentum. So how do we get that energy back? We'll teach you.</p>
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
@@ -62,10 +59,7 @@
 									<header>
 										<h3>Elevate</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>There will always be people in your life that will give you a million reasons why you cannot achieve your goals. Elevate Yourself for Success.</p>
 								</section>
 							</div>
 							<div class="col-12">
