--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 		<!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>Welcome to StressMantra</h1>
+					<h1>
+<span style="font-weight: normal;">Welcome to</span>
+<span style="font-weight: bold;"> StressMantra </span>
+</h1>
+
 					<p>One stop shop for all your mental wellbeing!</p>
 				</header>
 				<footer>
