--- a/index.html
+++ b/index.html
@@ -248,7 +248,13 @@
 			<section id="fourth" class="main">
 				<header>
 					<div class="container">
-						<h2>Innovation by Padmashree & Ajay Kumar</h2>
+						<h2>
+<span style="font-weight: normal;">Innovation by </span>
+<span style="font-weight: bold;">Padmashree  </span>
+<span style="font-weight: normal;">& </span>
+<span style="font-weight: bold;">AjayKumar  </span>
+
+</h2>
 						<p>If you want to learn more about how we're changing the world, feel free to drop us a message </p>
 					</div>
 				</header>
